# CRISPRAligner

./: .gitignore  CRISPRAligner.sh  LICENSE  README.md  pyproject.toml
crispr_aligner/: __init__.py  cli.py
crispr_aligner/aligner/: __init__.py  crr_aligner.py
crispr_aligner/combiner/: __init__.py  crr_combiner.py
crispr_aligner/finder/: __init__.py  crr_finder.py
crispr_aligner/sequences/: __init__.py  fasta_utils.py
crispr_aligner/utils/: __init__.py  config.py
tests/: conftest.py  create_test_data.py  test_crr_finder.py  test_fasta_utils.py
tests/test_data/: sample.fasta
